cmake_minimum_required(VERSION 3.10)
project(untitled C)

set(CMAKE_C_STANDARD 99)

add_executable(praise2.out 4.2.3/praise2.c)
set_target_properties(praise2.out PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/4.2.3/")
add_executable(test_var.out other/test_var.c)
set_target_properties(test_var.out PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/other/")
add_executable(cypher1.out 7.2.1/cypher1.c)
set_target_properties(cypher1.out PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/7.2.1/")
add_executable(cypher2.out 7.2.1/cypher2.c)
set_target_properties(cypher2.out PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/7.2.1/")
add_executable(test_switch.out other/test_switch.c)
set_target_properties(test_switch.out PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/other/")
add_executable(echo_eof.out 8.3.2/echo_eof.c)
set_target_properties(echo_eof.out PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/8.3.2/")
add_executable(pointerCompute.out study163/cAdvanced/2.2/pointerCompute.c)
set_target_properties(pointerCompute.out PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/study163/cAdvanced/2.2/")
add_executable(recur.out 9.3.1/recur.c)
set_target_properties(recur.out PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/9.3.1/")
add_executable(factor.out 9.3.3/factor.c)
set_target_properties(factor.out PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/9.3.3/")
add_executable(binary.out 9.3.4/binary.c)
set_target_properties(binary.out PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/9.3.4/")
add_executable(test_const_p.out other/test_const_p.c)
set_target_properties(test_const_p.out PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/other/")
add_executable(test_arr.out other/test_arr.c)
set_target_properties(test_arr.out PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/other/")
add_executable(zippol.out 10.7/zippol.c)
set_target_properties(zippol.out PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/10.7/")
add_executable(zippol2.out 10.7.1/zippol2.c)
set_target_properties(zippol2.out PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/10.7.1/")
add_executable(test_porinter_com.out other/test_porinter_com.c)
set_target_properties(test_porinter_com.out PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/other/")
add_executable(sort_str.out 11.6/sort_str.c)
set_target_properties(sort_str.out PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/11.6/")
add_executable(loc_stat.out loc_stat.c)
set_target_properties(loc_stat.out PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/")
add_executable(parta.out 12.1.10/parta.c 12.1.10/partb.c)
set_target_properties(parta.out PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/12.1.10/")
add_executable(dyn_arr.out 12.4/dyn_arr.c)
set_target_properties(dyn_arr.out PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/12.4/")